Bug 92475 - Screen Corruption on rotate. (With Bisect)
Summary: Screen Corruption on rotate. (With Bisect)
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/Radeon (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: xf86-video-ati maintainers
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-10-15 18:10 UTC by Lee Donaghy
Modified: 2015-10-20 16:06 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Xorg.0.log (79.73 KB, text/plain)
2015-10-15 18:10 UTC, Lee Donaghy
no flags Details

Description Lee Donaghy 2015-10-15 18:10:10 UTC
Created attachment 118900 [details]
Xorg.0.log

Running Ubuntu Wily x64 on a Radeon R9 280.

when i rotate the screen on one of my monitors the screen corrupts though the mouse cursor i can still move about as normal.

rotate was working previously on Ubuntu Vivid.


tried the latest git from xf86-video-ati and it's still broken.


xrandr output:
lee@desktop:~$ xrandr 
Screen 0: minimum 320 x 200, current 3160 x 1440, maximum 16384 x 16384
DVI-0 connected primary 2560x1440+0+0 (normal left inverted right x axis y axis) 597mm x 336mm
   2560x1440     59.95*+
DisplayPort-0 disconnected (normal left inverted right x axis y axis)
DisplayPort-1 disconnected (normal left inverted right x axis y axis)
HDMI-0 connected 600x800+2560+0 left (normal left inverted right x axis y axis) 360mm x 290mm
   800x600       85.06*+  72.19    75.00    60.32    56.25  
   1280x1024     75.02 +  60.02  
   1280x960      60.00  
   1280x800      84.88    74.93    59.91  
   1152x864      75.00  
   1280x768      84.84    74.89    59.99  
   1280x720      60.00  
   1024x768      85.00    75.08    70.07    60.00  
   1024x576      59.97  
   832x624       74.55  
   848x480       60.00  
   640x480       85.01    75.00    72.81    66.67    60.00    59.94  
   720x400       85.04    70.08  
   640x400       85.08  
   640x350       85.08



Bisect log:
lee@desktop:~/xf86-video-ati$ git bisect log
git bisect start
# good: [5921ba4ca705a0d919515626088f3948cc4848c1] present: Don't flip between BOs with different tiling parameters
git bisect good 5921ba4ca705a0d919515626088f3948cc4848c1
# bad: [1584dc545c78e0bce8d4b4b9f26b568e2c211453] Skip disabled CRTCs in drmmode_set_desired_modes() even if set_hw == FALSE
git bisect bad 1584dc545c78e0bce8d4b4b9f26b568e2c211453
# good: [43159ef400c3b18b9f4d3e6fa1c4aef2d60d38fe] Add Option "TearFree" v4
git bisect good 43159ef400c3b18b9f4d3e6fa1c4aef2d60d38fe
# bad: [673e1c7637687c74fc9bdeeeffb7ace0d04b734f] Defer initial modeset until the first BlockHandler invocation
git bisect bad 673e1c7637687c74fc9bdeeeffb7ace0d04b734f
# good: [39c497f3efca5ca08343b884f44c93215dcdef31] Only copy fbcon BO contents if bgNoneRoot is TRUE
git bisect good 39c497f3efca5ca08343b884f44c93215dcdef31
# good: [37874a4eeace5df04b02c8fc28f67b824e3f0f5f] Defer initial drmmode_copy_fb call until root window creation
git bisect good 37874a4eeace5df04b02c8fc28f67b824e3f0f5f
# first bad commit: [673e1c7637687c74fc9bdeeeffb7ace0d04b734f] Defer initial modeset until the first BlockHandler invocation
Comment 1 Michel Dänzer 2015-10-20 09:29:40 UTC
commit 548e97b3b7d1e94075a54ca2bb4eb683025098a7
Author: Michel Dänzer <michel.daenzer@amd.com>
Date:   Fri Oct 16 16:26:58 2015 +0900

    Call xf86CrtcRotate from initial drmmode_set_desired_modes call
    
    Fixes various problems when rotation is specified in xorg.conf.
Comment 2 Lee Donaghy 2015-10-20 16:06:21 UTC
confirmed, latest commit fixed the problem.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.