Call xf86CrtcRotate from initial drmmode_set_desired_modes call

Fixes various problems when rotation is specified in xorg.conf.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=92475

(ported from radeon commit 548e97b3b7d1e94075a54ca2bb4eb683025098a7)

Reviewed-by: Alex Deucher <alexander.deucher@amd.com>